k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dcm-staging
  labels:
    name: dcm-staging
    environment: staging
